--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 AI
 -----------------
-I took this intro to AI class in the Fall of 2020. Although it was an introduction course, I found many of the things we learned to be very practical. We went over topics such 
-as optimization algorithms, supervised learning, and unsupervised learning.
+I took this intro to AI class in the Fall of 2020. Although it was an introduction course, I found many of the things we learned to be very practical. We went over topics 
+such as optimization algorithms, supervised learning, and unsupervised learning.
 
 
 Algorithms
@@ -18,6 +18,6 @@ our RSC's.
 
 Discrete
 -----------------
-I took this course at the same time as my Algorithms and Data structures course. This class just ended up mirroring many of the topics learned in ADS but with a more conceptual, 
-mathematical approach. We covered additional topics such as matrix algebra and Turing tests.
+I took this course at the same time as my Algorithms and Data structures course. This class just ended up mirroring many of the topics learned in ADS but with a more 
+conceptual, mathematical approach. We covered additional topics such as matrix algebra and Turing tests.
 
